add new comment

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
         </section>
     </section>
-<!-- script file -->
+     <!-- javascript file -->
     <script src="script.js"></script>
 </body>
 
