--- a/index.html
+++ b/index.html
@@ -4,44 +4,59 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+
     <title>Weather App</title>
     <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
     <section class="container">
-        <!-- input field search  -->
-        <div class="weather_header">
-            <form class="weather_search">
-                <i class="fa-solid fa-magnifying-glass"></i>
-                <input type="text" class="city_name" placeholder="search your city..." />
-            </form>
-        </div>
-
-        <!-- weather main data -->
-        <div class="weather_body">
-
-            <h1 class="weather_city"></h1>
-            <p class="weather_date_time"></p>
-            
-            <div class="weather_data">
-                <p class="weather_forecast"></p>
-                <div class="weather_icon"></div>
-            </div>
-            <p class="weather_temperature"></p>
-            <div class="weather_minmax">
-                <p class="weather_min"></p>
-                <p class="weather_max"></p>
+          <!-- input field search  -->
+            <div class="weather_header">
+                <form class="weather_search">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                    <input type="text" class="city_name" placeholder="search your city..." />
+                </form>
             </div>
 
-        </div>
+        <div class="main-div">
+            <!-- weather main data -->
+            <div class="weather_body">
+                <h1 class="weather_city"></h1>
+                <p class="weather_date_time"></p>
+
+                <div class="weather_data">
+                    <p class="weather_forecast"></p>
+                    <div class="weather_icon"></div>
+                </div>
+                <p class="weather_temperature"></p>
+                <div class="weather_minmax">
+                    <p class="weather_min"></p>
+                    <p class="weather_max"></p>
+                </div>
+            </div>
 
         <!-- weather extra data  -->
         <section class="weather_info">
+            <!-- sunrise -->
+            <div class="weather_card">
+                <i class="fa-solid fa-sun"></i>
+                <div>
+                    <p>Sunrise</p>
+                    <p class="weather_sunrise">15&#176</p>
+                </div>
+            </div>
+            <!-- Sunset -->
+            <div class="weather_card">
+                <i class="fa-solid fa-moon"></i>
+                <div>
+                    <p>Sunset</p>
+                    <p class="weather_sunset">15&#176</p>
+                </div>
+            </div>
 
+            <!-- Feels Like -->
             <div class="weather_card">
                 <i class="fa-solid fa-droplet"></i>
                 <div>
@@ -55,9 +70,9 @@
                 <div>
                     <p>Humidity</p>
                     <p class="weather_humidity">15&#176</p>
-                </div> 
+                </div>
             </div>
-
+            <!-- wind speed -->
             <div class="weather_card">
                 <i class="fa-solid fa-wind"></i>
                 <div>
@@ -65,7 +80,14 @@
                     <p class="weather_wind">15&#176</p>
                 </div>
             </div>
-
+            <!-- wind degree -->
+            <div class="weather_card">
+                <i class="fa-solid fa-wind"></i>
+                <div>
+                    <p>Wind Flow</p>
+                    <p class="weather_winddeg">15&#176</p>
+                </div>
+            </div>
             <div class="weather_card">
                 <i class="fa-solid fa-gauge-high"></i>
                 <div>
@@ -73,12 +95,28 @@
                     <p class="weather_pressure">15&#176</p>
                 </div>
             </div>
-
+            <!-- Latitude -->
+            <div class="weather_card">
+                <i class="fa-solid fa-location-dot"></i>
+                <div>
+                    <p>Latitude</p>
+                    <p class="weather_lat"></p>
+                </div>
+            </div>
+            <!-- Longitude -->
+            <div class="weather_card">
+                <i class="fa-solid fa-location-dot"></i>
+                <div>
+                    <p>Longitude</p>
+                    <p class="weather_long"></p>
+                </div>
+            </div>
+             </div>
         </section>
     </section>
 
-     <!-- javascript file -->
-      <!-- js file -->
+    <!-- javascript file -->
+    <!-- js file -->
 
     <script src="script.js"></script>
 </body>
